[package]
name = "kaitlynsguessinggame"
version = "1.0.0"
description = "A fairly shoddy guessing game"
authors = ["Kaitlyn~Ethylia <kaitlyyn.ethylia@proton.me>"]
edition = "2021"
repository = "https://github.com/KaitlynEthylia/KaitlynsGuessingGame"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
rand = "0.8.5"
